test/sparse/domains/emptyLast.good
10
emptyLast.chpl:5: error: halt reached - 'last' is invoked on an empty sparse domain
